@@ -1,3 +1,8 @@
+2002-03-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mapedit/shapelst.cc: "New shape", "Edit tiled" added to popup in
+	shape browser.
+
 2002-03-20  Ryan Nunn  <triforce@merlin.net.au>
 	* game.cc : Fixing allignment problem in German BG Menu
 
